--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -1,5 +1,22 @@
-html body {
+body {
     height: 100%;
     margin: 0;
     background-color: black;
+}
+form {
+    position: absolute;
+    display: none;
+}
+#playername {
+    font-family: 'Nova Script';
+    font-size: 2vw;
+    position: absolute;
+    margin: 24vw 0 0 60vw;
+    width: 32vw;
+    border: 2px solid #777;
+    background-color: #1a1a1a;
+    color: white;
+    padding: 0.5vw 0.7vw;
+    border-radius: 6px;
+    outline: none;
 }
